Pathexec and mobkiller improvements